Fix z-index of navbar dropdown

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -677,3 +677,7 @@ td.keys {
 .btn-outline-dark:hover{
   fill: #fff;
 }
+
+.flex-header .dropdown-menu{
+  z-index: 2000;
+}
